--- a/RiptideNetworking/.editorconfig
+++ b/RiptideNetworking/.editorconfig
@@ -11,9 +11,12 @@ file_header_template = This file is provided under The MIT License as part of Ri
 # IDE0073: Incorrect/missing header
 dotnet_diagnostic.IDE0073.severity = warning
 
-# Exclude CMath.cs and FastBigInt.cs
+# Exclude CMath.cs and FastBigInt.cs and WrappingList.cs
 [CMath.cs]
 dotnet_diagnostic.IDE0073.severity = none
 
 [FastBigInt.cs]
+dotnet_diagnostic.IDE0073.severity = none
+
+[WrappingList.cs]
 dotnet_diagnostic.IDE0073.severity = none
