--- a/RiptideNetworking/.editorconfig
+++ b/RiptideNetworking/.editorconfig
@@ -11,15 +11,6 @@ file_header_template = This file is provided under The MIT License as part of Ri
 # IDE0073: Incorrect/missing header
 dotnet_diagnostic.IDE0073.severity = warning
 
-# Exclude CMath.cs and FastBigInt.cs and WrappingList.cs
-[CMath.cs]
-dotnet_diagnostic.IDE0073.severity = none
-
-[FastBigInt.cs]
-dotnet_diagnostic.IDE0073.severity = none
-
-[WrappingList.cs]
-dotnet_diagnostic.IDE0073.severity = none
-
-[PendingQueuedMessage.cs]
-dotnet_diagnostic.IDE0073.severity = none
+# Math.cs or FastBigInt.cs or WrappingList.cs or PendingQueuedMessage.cs
+[[CFWP][Mare][asn][tpd][hBpi]*.cs]
+file_header_template = This file is provided under The MIT License as part of RiptideNetworking.\nCopyright (c) not Tom Weiland but me https://github.com/Per6\nFor additional information please see the included LICENSE.md file or view it on GitHub:\nhttps://github.com/RiptideNetworking/Riptide/blob/main/LICENSE.md
